# KenoBot

./: CMakeLists.txt  README.md  autor.md
include/: KenoBet.hpp  services.hpp  validation.hpp
src/: KenoBet.cpp  main.cpp  teste  validation.cpp
